Fixes the alignment of the widgets with the modal
In the widgets modal, only two widgets could be on the same row instead of three due to a calculation error of the size of each of them.

--- a/app/assets/stylesheets/components/management/c-widgets-modal.scss
+++ b/app/assets/stylesheets/components/management/c-widgets-modal.scss
@@ -33,7 +33,7 @@
 
     .widget {
       position: relative;
-      flex-basis: calc((100% / 3) - ((2 * 20px) / 3));
+      flex-basis: calc((100% / 3) - (2 * 10px));
       margin: 25px 10px;
 
       label {
